<resources>
    <string name="app_name">ToDo</string>
    <string name="hintname">Name</string>
    <string name="hintBeschreibung">Beschreibung</string>
    <string name="inputFavourite">Favourite</string>
    <string name="inputDone">Done</string>
    <string name="dueDate">DD/MM/YYYY</string>
    <string name="dueTime">00:00</string>
    <string name="inputID">ID</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="checkDBConnection">Teste Datenbank Verbindung</string>
    <string name="settingsSettings">Einstellungen</string>
    <string name="settingsConnected">Datenbank verbindung hergestellt</string>
    <string name="settingsDeleteAllTodos">Lösche alle ToDos</string>
    <string name="detailHintImportContacts">Kontakte importieren</string>
    <string name="sortPopupChooseSort">Choose sort option</string>
    <string name="sortPopupFavourite">Favoriten</string>
    <string name="sortPopupDate">Datum</string>
    <string name="mainDeleteAllElements">Möchten sie wirklich alle ToDo Elemente löschen?</string>
    <string name="mainDeleteAll">Alles löschen</string>
    <string name="mainAbort">Abbrechen</string>
    <string name="taskRemoteAvailable">Remote available</string>
    <string name="taskRemoteNotAvailable">Remote not available</string>
    <string name="taskDeleteSuccess">Delete success</string>
    <string name="taskDeleteSuccessFail">Delete failed</string>
    <string name="detailSaveMinimumNameLength">Name muss mindestens 4 Zeichen besitzen</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="StandardLogin">Standard Login</string>
    <string name="chooseColoumnsStart">Choose coloumns</string>
    <string name="email"><![CDATA[<u>Email:</u>]]></string>
    <string name="taskSyncSuccess">Sync successfull</string>
    <string name="taskSyncFail">Sync failed</string>
</resources>
