<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="36dp"
                android:text="@string/settingsSettings">
            </androidx.appcompat.widget.AppCompatTextView>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settingsConnected"
                android:id="@+id/checkDBConnection"
                android:checked="false"
                android:textSize="16dp">
            </CheckBox>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCheckDBConnection"
                android:text="@string/checkDBConnection"
            ></Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttondeleteAllToDo"
                android:text="@string/settingsDeleteAllTodos"
                ></Button>
        </LinearLayout>


    </FrameLayout>
</LinearLayout>