<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:textSize="22sp"
        android:text="@string/sortPopupChooseSort"/>
    <RadioGroup
        android:id="@+id/radioGroup_character"
        android:layout_width="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="30dp"
        android:layout_height="wrap_content">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sortPopupFavourite"
        android:id="@+id/radioSortDone">
    </RadioButton>
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sortPopupDate"
        android:id="@+id/radioSortFavouriteAndExpiry">
    </RadioButton>

    </RadioGroup>
</LinearLayout>